vlib/v/checker/tests/anon_fn_arg_type_err.out
vlib/v/checker/tests/anon_fn_arg_type_err.vv:6:14: error: use `_` to name an unused parameter
    4 |     mut i := 1
    5 |
    6 |     func := fn (i) int {
      |                 ^
    7 |         return i
    8 |     }
vlib/v/checker/tests/anon_fn_arg_type_err.vv:7:10: error: undefined ident: `i`
    5 |
    6 |     func := fn (i) int {
    7 |         return i
      |                ^
    8 |     }
    9 |
vlib/v/checker/tests/anon_fn_arg_type_err.vv:10:15: error: cannot use `int` as `i` in argument 1 to `func`
    8 |     }
    9 |
   10 |     println(func(i) == 1)
      |                  ^
   11 | }
